# intero-partisipan

./: Dockerfile  main.py  pyproject.toml  requirements.txt
